--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "autoprefixer": "10.4.15",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.1",
